--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 
 
-          <li id="tag1k">1. TESTTTTT biomimicry + sustainable design</li>
+          <li id="tag1k">1. biomimicry + sustainable design</li>
           <li id="tag2k">2. Berkeley refuse solution </li>
           <li id="tag3k"><a href="#tag3k">3. frontage analysis</a></li>
           <li id="tag4k"><a href="#tag4k">4. mapping adventures</a></li>
@@ -25,7 +25,7 @@
           <li id="tag7k"><a href="#tag7k">7. advocacy campaigns</a></li>
           <li id="tag8k"><a href="#tag8k">8. SolarNexus sales app</a></li>
           <li id="tag9k"><a href="#tag9k">9. Sunk Investment</a></li>
-          <li id="tag10k"><a href="#tag10k">10. TVNews</a></li>
+          <li id="tag10k"><a href="#tag10k">10. tv.archive.org</a></li>
           <li id="tag11k"><a href="#tag11k"> &#9660fun&#9660 </a></li>
         </ul>
       </div>
@@ -282,7 +282,7 @@
                 <div class="cycle-next"></div>
                 <img src="images/5_graphics_1.jpg" width="1000">
                 <img src="images/5_graphics_2.jpg" width="1000">
-                <img src="images/5_graphics_3.jpg" width="1000">
+                <img src="images/5_graphics_3b.jpg" width="1000">
               </div>
 
               <div id="four">
@@ -443,7 +443,7 @@
           <p style="font-size: 40px">Part III. Things I'm Doing Now</p>
           <p style="font-size: 24px"><i>Database Interfaces</i></p>
           <p style="font-size: 24px"><i>Large-Scale Interaction Modeling</i></p>
-          <p style="font-size: 10px line-height: 200%">(2013-ongoing)</p>
+          <p style="font-size: 10px line-height: 200%">(2013 - today)</p>
         </div>
       </div>
 
@@ -566,7 +566,7 @@
             <td><div id="one" style="color:#989898">
               winter 2013<br>
               ---<br>
-              In my final months as a freelancer, I was given an incredible opportunity to work with The Internet Archive, an organization I love dearly for the work they do. A Creative Director and I worked with the TVNews Team at Archive.org, to design <a href="https://archive.org/details/tv?tv2=1">v2.0</a> of their recently launched TV News site - the interface for a repository of 500k and growing broadcasts from news networks worldwide. That site is currently being tested for launch in the next month!
+              In my final months as a freelancer, I was given an incredible opportunity to work with The Internet Archive, an organization I love dearly for the work they do. A Creative Director and I worked with the TVNews Team at Archive.org, to design v2.0 of their recently launched TV News site - the interface for a repository of 500k and growing broadcasts from news networks worldwide. That site is currently being tested for launch in the next month!
             </div>
             </td>
           
@@ -598,13 +598,15 @@
           <tr>
             <td valign="bottom">
               <div id="two" align="center">
-                <p style="font-size: 24px">10. TVNews</p>
+                <p style="font-size: 24px">10. tv.archive.org</p>
                 <p style="font-size: 16px">THE INTERNET ARCHIVE, FREELANCE</p>
-                <p style="font-size:12px">contributors: Kristen Schlott, David Merkoski, Ben Ronning</p>
+                <p style="font-size:12px">contributors: Kristen Schlott, David Merkoski, Ben Ronning, Tracey Jaquith</p>
               </div>
 
               <div id="three">
-                Upon receiving a grant from the <a href="http://www.knightfoundation.org/press-room/press-mention/internet-archive-receives-1-million-knight-foundat/" target="_blank">Knight Foundation</a> earlier this year, the good folks at the <a href="https://archive.org/" target="_blank">Internet Archive</a> hired master designer David Merkoski to overhaul their TV News + Broadcast site. David, in turn, built a team of including himself,  Ben Ronning for prototype development, and myself for UI/UX design.<br>In keeping with the Archive's ethos of pure and open data, we designed a highly functional site with very simple design detail, that provide users with the cleanest access to the Archive's vast library of TV News broadcasts. The site is currently live in <a href="https://archive.org/details/tv?tv2=1"> beta mode </a> and being tested for a launch scheduled this month ( February 2014)! 
+                <div style="font-size: 20px" align="center"> <p>It's alive! See it here: <a href="https://archive.org/details/tv?q=barack%20obama"/>tv.archive.org</a></p>
+                </div>
+                Upon receiving a grant from the <a href="http://www.knightfoundation.org/press-room/press-mention/internet-archive-receives-1-million-knight-foundat/" target="_blank">Knight Foundation</a> earlier this year, the good folks at the <a href="https://archive.org/" target="_blank">Internet Archive</a> hired master designer David Merkoski to overhaul their TV News + Broadcast site. David, in turn, built a team of including himself,  Ben Ronning for prototype development, and myself for UI/UX design.<br>In keeping with the Archive's ethos of pure and open data, we designed a highly functional site with very simple design detail, that provide users with the cleanest access to the Archive's vast library of TV News broadcasts. The site is currently live in beta mode, being tested for full launch February 2014! 
               </div>
             </td>
           </tr>
@@ -615,12 +617,6 @@
       <div class="footer_container" style="background-color:#2E2E2E">
 
         <div class="footer_content_box">
-          <p id="triangles">&#9660;</p>
-          <p id="triangles">&#9660;</p>
-          <p id="triangles">&#9660;</p>
-          <p id="triangles">&#9660;</p>
-          <p id="triangles">&#9660;</p>
-          <p id="triangles">&#9660;</p>
           <p id="triangles">&#9660;</p>
           <p id="triangles">&#9660;</p>
           <p id="triangles">&#9660;</p>
@@ -665,13 +661,10 @@
                   <img src="images/00_personal_3.jpg"width="300px"/>
                   <img src="images/00_personal_6.jpg"width="300px"/>
               </div>
-
-
-
-
-
-
-
+            <div align="center">
+              <p id="triangles">&#9660;</p>
+              <p id="triangles">&#9660;</p>
+              <p id="triangles">&#9660;</p>
             <iframe src="http://player.vimeo.com/video/68447564?portrait=0" width="610" height="343" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
           </div>
           <p id="triangles">&#9660;</p>
