Added anchor links to header

--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
 
 		<div id="navbar" align="center">
 	        <ul id="navbarlist" align="center">
-	            <li id="tag1k">urban studies & design</li>
-	            <li id="tag2k">mapping adventures</li>
-	            <li id="tag3k">advocacy campaigns</li>
-	            <li id="tag4k">architecture valentines</li>
-	            <li id="tag5k">graphic design</li>
-	            <li id="tag6k">SolarNexus sales app UI</li>
-	            <li id="tag7k">Sunk Investment product UI</li>
-	            <li id="tag8k">TVNews product UI</li>
-	            <li id="tag9k"> &#9660fun&#9660 </li>
+	            <li id="tag1k"><a href="#urban_studies">urban studies & design</a></li>
+	            <li id="tag2k"><a href="#mapping_adventures">mapping adventures</a></li>
+	            <li id="tag3k"><a href="#advocacy_campaign_architecture_humanity">advocacy campaigns</a></li>
+	            <li id="tag4k"><a href="#architecture_valentines">architecture valentines</a></li>
+	            <li id="tag5k"><a href="#graphic_design_various">graphic design</a></li>
+	            <li id="tag6k"><a href="#mobile_app_ui">SolarNexus sales app UI</a></li>
+	            <li id="tag7k"><a href="#website_ui">Sunk Investment product UI</a></li>
+	            <li id="tag8k"><a href="#digital_project_ui">TVNews product UI</a></li>
+	            <li id="tag9k"><a href="#fun">&#9660fun&#9660 </a></li>
 	        </ul>
 		</div>
 
@@ -60,7 +60,7 @@
 		</div>
 	</div>
 
-
+    <a id="urban_studies"></a>
 	<div class="project_container" style="background-color:#DFF6F0">
 		<div class="project_content_box">
 			<p style="font-size: 24px">Urban Studies & Design</p>
@@ -75,7 +75,7 @@
 		</div>
 	</div>
 
-
+    <a id="mapping_adventures"></a>
 	<div class="project_container" style="background-color:#A9F5E1">
 		<div class="project_content_box">
 			<p style="font-size: 24px"> Mapping Adventures in the Bay Area </p>
@@ -102,7 +102,7 @@
 	</div>
 
 
-
+    <a id="advocacy_campaign_architecture_humanity"></a>
 	<div class="project_container" style="background-color:#F1EEFC">
 		<div class="project_content_box">
 			<p style="font-size: 24px"> Advocacy Campaign Creative Direction + Asset Design</p>
@@ -123,7 +123,7 @@
 		</div>
 	</div>
 
-
+    <a id="architecture_valentines"></a>
 	<div class="project_container" style="background-color:#E6E1FD">
 		<div class="project_content_box">
 			<p style="font-size: 24px"> Architecture Valentines Concept + Design</p>
@@ -147,6 +147,7 @@
 		</div>
 	</div>
 
+    <a id="graphic_design_various"></a>
 	<div class="project_container" style="background-color:#C8CAFC">
 		<div class="project_content_box">
 			<p style="font-size: 24px">Graphic Design, Various Projects</p>
@@ -165,6 +166,7 @@
 	</div>
 
 
+    <a id="mobile_app_ui"></a>
 	<div class="project_container" style="background-color:#DEA3ED">
 		<div class="project_content_box" style="color:#585858">
 			<p style="font-size: 24px"> Mobile Sales App UI Design</p>
@@ -182,7 +184,7 @@
 	</div>
 
 
-
+    
 	<div class="section_container">
 		<div class="section_content_box"> 
 			<img src="images/sig_works_thumb.png" width="125" alt="thumbnail" title="Substantial Works">
@@ -194,7 +196,7 @@
 		</div>
 	</div>
 
-
+    <a id="website_ui"></a>
 	<div class="project_container" style="background-color:#F5D0A9">
 		<div class="project_content_box" >
 			<p style="font-size: 24px">Website UI Design</p>
@@ -212,7 +214,7 @@
 		</div>
 	</div>
 
-
+    <a id="digital_project_ui"></a>
 	<div class="project_container" style="background-color:#FAAC58">
 		<div class="project_content_box" style="color:#585858">
 			<p style="font-size: 24px">Digital Product UI Design</p>
